# NanoNets

./: .gitignore  LICENSE  README.md  abundance_memristor.ipynb  autocorrelations.ipynb  capacitance.ipynb  convert_to_feather.py  fuck_dopants.py  history.pkl  log_func.ipynb  lorenz.ipynb  main.ipynb  main_pot_current.ipynb  main_time.ipynb  memory_capacity.ipynb  merge_results.py  potential_estimation.ipynb  pyproject.toml  scalers.pkl  test.ipynb  test_data.npz  times.ipynb  trained_model.keras  trained_model_history_epoch_100.pkl  trained_model_history_epoch_200.pkl  trans_for_evan.ipynb  trash.ipynb  voltage_sens.ipynb
docs/: single_electronics.md
examples/: electrostatic.ipynb  nanonets.ipynb  simulation.ipynb  topology.ipynb  tunneling.ipynb
nanonets/: __init__.py  electrostatic.py  monte_carlo.py  simulation.py  topology.py  tunneling.py  utils.py
scripts/: complexity.ipynb  control_sens.py  controls.py  controls1.py  controls2.py  controls_new.py  del_links.py  gate_impact.py  load_csv.py  system_size.py  system_size_disorder.py  system_size_iv_curves.py  system_size_scales.py  system_size_volt_magnitude.py  temperature.py  temperature_var_sizes.py  time_dep.py  time_dep_dis_topo.py  time_dep_noise.py
src/: dopant_networks.py  electrostatic.py  kmc_dopant_networks.py  model.py  monte_carlo.py  nanonets.py  nanonets_utils.py  outdated.py  simulation.py  topology.py  tunneling.py  voltage_config.py
test/: autocorrelations.ipynb  electrostatic.ipynb  electrostatic_test.ipynb  merge_results.py  new_electrostatics.ipynb  packing.ipynb  topology.ipynb
(+704 files in other folders)
